[package]
name = "airnode-abi"
version = "0.1.0"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EnormousCloud/airnode/"
homepage = "https://github.com/EnormousCloud/airnode/"
description = "Airnode ABI (API3.org) encoder/decoder"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hex = "0.4"
hex-literal = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ethereum-types = { version = "0.11" }

[dev-dependencies]
rand = "0.8"

