[package]
name = "airnode-abi"
version = "0.1.5"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EnormousCloud/airnode/"
homepage = "https://github.com/EnormousCloud/airnode/"
description = "Airnode ABI (API3.org) encoder/decoder"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
hex = "0.4"
hex-literal = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ethereum-types = { version = "0.12.1" }
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"

