[package]
name = "airnode-events"
version = "0.1.2"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EnormousCloud/airnode/"
homepage = "https://github.com/EnormousCloud/airnode/"
description = "Airnode Events (API3.org)"
readme = "README.md"


[dependencies]
airnode-abi = { version = "0.1" }
async-trait = { version = "0.1" }
hex = { version = "0.4" }
hex-literal = "0.3"
phf = { version = "0.9", default-features = false, features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web3 = { version = "0.16.0", default-features = false, features = ["wasm"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web3 = { version = "0.16.0" }
