[package]
name = "airnode-ois"
version = "0.1.0"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EnormousCloud/airnode/"
homepage = "https://github.com/EnormousCloud/airnode/"
description = "Airnode Oracle Integration Specification types (API3.org)"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
