[package]
name = "airnode-rrp-explorer"
version = "0.1.0"
edition = "2018"
authors = ["EnormousCloud"]
license = "MIT"

[dependencies]
anyhow = "1"
yew = { git = "https://github.com/yewstack/yew" }
log = "0.4"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
gloo = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
web3 = { version = "0.16.0", default-features = false, features = ["wasm","http"] }