[package]
name = "airnode-rrp-explorer"
version = "0.1.0"
edition = "2018"
authors = ["EnormousCloud"]
license = "MIT"

[dependencies]
airnode-events = { path = "../airnode-events" }
anyhow = "1"
gloo = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "2.2.2"
wasm-bindgen = "0.2.74"
web3 = { version = "0.16.0", default-features = false, features = ["wasm", "http"] }
yew = { git = "https://github.com/yewstack/yew" }