[package]
name = "airnode-rrp-log"
version = "0.1.0"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EnormousCloud/airnode/"
homepage = "https://github.com/EnormousCloud/airnode/"
description = "Airnode RRP Log command-line interface"
readme = "README.md"

[dependencies]
airnode-abi = { version = "0.1" }
airnode-events = { version = "0.1.2" }
anyhow = { version = "1.0" }
dotenv = "0.15"
futures = "0.3.13"
hex = "0.4"
hex-literal = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.8.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
tracing-futures =  { version = "0.2" }
tracing-subscriber = { version = "0.2" }
web3 = { version = "0.16.0" }
