[package]
name = "airnode-ui-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
airnode-events = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
jsonrpc-core = "18.0"
serde_json = { version = "1.0" }
serde = { version = "1.0", default-features = false, features = ["std", "derive"]  }
tokio = { version = "1.0" }
web3 = { version = "0.17.0" }
